Сертификаты HTML Academy [deploy]

--- a/tools/main.conf
+++ b/tools/main.conf
@@ -22,7 +22,7 @@ server {
 		rewrite ^/(.*)/$ /$1 permanent;
 	}
 
-	location ~* ^.+.(css|html|ico|js|png|svg|txt|webmanifest|webp|woff2|xml)$ {
+	location ~* ^.+.(css|html|ico|js|pdf|png|svg|txt|webmanifest|webp|woff2|xml)$ {
 		root /home/web-studio/efiand/public;
 		charset utf-8;
 		expires 30d;
