--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,17 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.3/schema.json",
-	"vcs": {
-		"enabled": true,
-		"clientKind": "git",
-		"useIgnoreFile": true
+	"$schema": "https://biomejs.dev/schemas/2.3.14/schema.json",
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "on",
+				"useSortedKeys": "on"
+			}
+		},
+		"enabled": true
 	},
 	"files": {
-		"ignoreUnknown": true
+		"ignoreUnknown": true,
+		"includes": ["**", "!public"]
 	},
 	"formatter": {
 		"enabled": true,
@@ -19,39 +24,43 @@
 		},
 		"enabled": true,
 		"rules": {
-			"recommended": true,
-			"complexity": {
-				"noUselessStringConcat": "error"
-			},
+			"complexity": { "noUselessStringConcat": "error" },
 			"correctness": {
-				"noUnusedVariables": "error",
+				"noUnusedFunctionParameters": "error",
 				"noUnusedImports": "error",
-				"noUnusedFunctionParameters": "error"
+				"noUnusedVariables": "error"
 			},
-			"performance": {
-				"noAccumulatingSpread": "error"
-			},
+			"performance": { "noAccumulatingSpread": "error" },
+			"recommended": true,
 			"style": {
+				"useBlockStatements": "error",
 				"useConst": { "fix": "none", "level": "error", "options": {} }
 			},
 			"suspicious": {
 				"noConsole": {
 					"fix": "none",
 					"level": "error",
-					"options": {
-						"allow": ["assert", "error", "info", "warn"]
-					}
+					"options": { "allow": ["assert", "error", "info", "warn"] }
 				},
 				"noGlobalIsNan": "error"
 			}
 		}
 	},
-	"assist": {
-		"enabled": true,
-		"actions": {
-			"source": {
-				"organizeImports": "on"
+	"overrides": [
+		{
+			"includes": ["**/vendors/**"],
+			"linter": {
+				"rules": {
+					"complexity": {
+						"noImportantStyles": "off"
+					}
+				}
 			}
 		}
+	],
+	"vcs": {
+		"clientKind": "git",
+		"enabled": true,
+		"useIgnoreFile": true
 	}
 }
