--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,16 @@
 		"moduleResolution": "nodenext",
 		"noEmit": true,
 		"noImplicitAny": true,
-		"skipLibCheck": true,
 		"paths": {
 			"#client/*": ["./src/client/*"],
 			"#common/*": ["./app/common/*"],
 			"#server/*": ["./app/server/*"]
 		},
 		"resolveJsonModule": true,
+		"skipLibCheck": true,
 		"strict": true,
 		"target": "es2022"
-	}
+	},
+	"exclude": ["public"],
+	"typeRoots": ["./src/types"]
 }
