--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 *cache*
-*log*
 .DS_Store
 .env
 .vscode/*
 !.vscode/extensions.json
 !.vscode/settings.json
 Thumbs.db
+app/__
+logs
 node_modules
 public/**/*.html
 public/*.xml
