--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
+	"dependencies": {
+		"html-minifier-terser": "7.2.0"
+	},
 	"devDependencies": {
-		"@biomejs/biome": "2.2.3",
-		"@fastify/pre-commit": "2.2.0",
-		"@types/node": "24.3.1",
+		"@biomejs/biome": "2.3.14",
+		"@fastify/pre-commit": "2.2.1",
+		"@types/html-minifier-terser": "7.0.2",
+		"@types/node": "25.2.2",
 		"@types/postcss-import": "14.0.3",
 		"@types/postcss-url": "10.0.4",
-		"cssnano": "7.1.1",
-		"fast-xml-parser": "5.2.5",
-		"html-validate": "10.0.0",
-		"nodemon": "3.1.10",
+		"cssnano": "7.1.2",
+		"fast-xml-parser": "5.3.5",
+		"html-validate": "10.7.0",
+		"nodemon": "3.1.11",
 		"postcss": "8.5.6",
 		"postcss-cli": "11.0.1",
 		"postcss-import": "16.1.1",
 		"postcss-sort-media-queries": "5.2.0",
 		"postcss-url": "10.1.3",
 		"posthtml-bem-linter": "0.1.8",
-		"typescript": "5.9.2"
+		"typescript": "5.9.3"
 	},
 	"imports": {
 		"#client/*": "./src/client/*",
@@ -30,7 +34,7 @@
 	],
 	"private": true,
 	"scripts": {
-		"build": "node ./tools/build.js",
+		"build": "node ./tools/build-static-pages.js",
 		"dev": "nodemon ./src/server/main.js",
 		"lint": "npm run type-check && biome check",
 		"lint-format": "npm run type-check && biome check --write",
