--- a/tools/main.conf
+++ b/tools/main.conf
@@ -1,35 +1,68 @@
-error_log /home/web-studio/efiand/logs/error.log;
-
 server {
-	listen [::]:80;
+	# -----------------------------
+	# 1. Логи
+	# -----------------------------
+	access_log /home/web-studio/efiand/logs/access-http.log;
+	error_log /home/web-studio/efiand/logs/error-http.log;
+
+	# -----------------------------
+	# 2. server_name / listen
+	# -----------------------------
 	listen 80;
+	listen [::]:80;
 	server_name efiand.ru;
 
 	return 301 https://efiand.ru$request_uri;
 }
 
 server {
-	listen [::]:443 ssl http2;
+	# -----------------------------
+	# 1. Логи
+	# -----------------------------
+	access_log /home/web-studio/efiand/logs/access.log;
+	error_log /home/web-studio/efiand/logs/error.log;
+
+	# -----------------------------
+	# 2. Error pages
+	# -----------------------------
+	error_page 404 /__/404/index.html;
+	error_page 500 502 503 504 /__/update/index.html;
+
+	# -----------------------------
+	# 3. SSL и server_name / listen
+	# -----------------------------
+	include /etc/letsencrypt/options-ssl-nginx.conf;
 	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
+	server_name efiand.ru;
 	ssl_certificate /etc/letsencrypt/live/efiand.ru/fullchain.pem;
 	ssl_certificate_key /etc/letsencrypt/live/efiand.ru/privkey.pem;
-	include /etc/letsencrypt/options-ssl-nginx.conf;
 	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-	server_name efiand.ru;
-
+	# -----------------------------
+	# 4. Rewrite / if
+	# -----------------------------
 	if (!-f $request_filename) {
 		rewrite ^/(.*)/$ /$1 permanent;
 	}
 
+	# -----------------------------
+	# 5. Location blocks (по приоритету)
+	# -----------------------------
+
+	## 5.1 Internal static / error pages
+	location ^~ /__ {
+		internal;
+		add_header Cache-Control "no-store";
+		etag off;
+		gzip off;
+		root /home/web-studio/efiand/app;
+	}
+
+	## 5.2 Public static assets (regex)
 	location ~* ^.+.(css|html|ico|js|pdf|png|svg|txt|webmanifest|webp|woff2|xml)$ {
 		root /home/web-studio/efiand/public;
 		charset utf-8;
 		expires 30d;
-	}
-
-	location / {
-		error_page 404 502 503 504 /404.html;
-		error_page 502 503 504 /update.html;
 	}
 }
