--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-	"[html]": {
-		"editor.defaultFormatter": "vscode.html-language-features"
-	},
+	"biome.requireConfiguration": true,
 	"editor.codeActionsOnSave": {
 		"source.fixAll.biome": "explicit",
 		"source.organizeImports.biome": "explicit",
@@ -16,5 +14,6 @@
 	},
 	"emmet.preferences": {
 		"output.reverseAttributes": true
-	}
+	},
+	"prettier.enable": false
 }
