--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *cache*
+*tmp*
 .DS_Store
 .env
 .vscode/*
@@ -6,6 +7,7 @@
 !.vscode/settings.json
 Thumbs.db
 app/__
+bundles
 logs
 node_modules
 public/**/*.html
