--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
 	"dependencies": {
-		"html-minifier-terser": "7.2.0"
+		"formidable": "3.5.4",
+		"html-minifier-terser": "7.2.0",
+		"node-telegram-bot-api": "0.67.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.3.14",
+		"@biomejs/biome": "2.3.15",
+		"@dotenvx/dotenvx": "1.52.0",
 		"@fastify/pre-commit": "2.2.1",
+		"@types/amphtml-validator": "1.0.4",
+		"@types/formidable": "3.4.6",
 		"@types/html-minifier-terser": "7.0.2",
-		"@types/node": "25.2.2",
+		"@types/node": "25.2.3",
+		"@types/node-telegram-bot-api": "0.64.13",
 		"@types/postcss-import": "14.0.3",
 		"@types/postcss-url": "10.0.4",
+		"amphtml-validator": "1.0.38",
 		"cssnano": "7.1.2",
-		"fast-xml-parser": "5.3.5",
+		"fast-xml-parser": "5.3.6",
 		"html-validate": "10.7.0",
 		"nodemon": "3.1.11",
 		"postcss": "8.5.6",
 		"postcss-cli": "11.0.1",
 		"postcss-import": "16.1.1",
 		"postcss-sort-media-queries": "5.2.0",
-		"postcss-url": "10.1.3",
 		"posthtml-bem-linter": "0.1.8",
 		"typescript": "5.9.3"
 	},
@@ -34,11 +40,11 @@
 	],
 	"private": true,
 	"scripts": {
-		"build": "node ./tools/build-static-pages.js",
-		"dev": "nodemon ./src/server/main.js",
+		"build": "postcss src/client/css/*.css -d public/bundles && node ./tools/build-static-pages.js",
+		"dev": "dotenvx run -- nodemon ./src/server/main.js",
 		"lint": "npm run type-check && biome check",
 		"lint-format": "npm run type-check && biome check --write",
-		"preview": "node ./src/server/main.js",
+		"preview": "dotenvx run -- node ./src/server/main.js",
 		"test": "npm run build && node --test",
 		"type-check": "tsc -p ./tsconfig.json",
 		"upgrade": "node ./tools/upgrade.js"
