--- a/tools/main.conf
+++ b/tools/main.conf
@@ -65,4 +65,23 @@ server {
 		charset utf-8;
 		expires 30d;
 	}
+
+	## 5.3 AMP pages
+	location ~ ^/amp(.*)$ {
+		root /home/web-studio/efiand/public;
+		charset utf-8;
+		expires 30d;
+		try_files /amp$1/index.html =404;
+	}
+
+	## 5.4 Proxy / backend
+	location /api/telegram {
+		proxy_pass http://127.0.0.1:4104;
+		proxy_http_version 1.1;
+		proxy_read_timeout 600s;
+		proxy_set_header Host $host;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_cache_bypass $http_upgrade;
+	}
 }
