--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.15/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.4.0/schema.json",
 	"assist": {
 		"actions": {
 			"source": {
@@ -11,7 +11,7 @@
 	},
 	"files": {
 		"ignoreUnknown": true,
-		"includes": ["**"]
+		"includes": ["**", "!public"]
 	},
 	"formatter": {
 		"enabled": true,
@@ -19,9 +19,7 @@
 		"lineWidth": 120
 	},
 	"linter": {
-		"domains": {
-			"project": "all"
-		},
+		"domains": { "project": "all" },
 		"enabled": true,
 		"rules": {
 			"complexity": { "noUselessStringConcat": "error" },
@@ -34,7 +32,11 @@
 			"recommended": true,
 			"style": {
 				"useBlockStatements": "error",
-				"useConst": { "fix": "none", "level": "error", "options": {} }
+				"useConst": {
+					"fix": "none",
+					"level": "error",
+					"options": {}
+				}
 			},
 			"suspicious": {
 				"noConsole": {
@@ -48,12 +50,10 @@
 	},
 	"overrides": [
 		{
-			"includes": ["**/vendors/**"],
+			"includes": ["**/server/**", "**/*server.*", "test/**", "tools/**"],
 			"linter": {
 				"rules": {
-					"complexity": {
-						"noImportantStyles": "off"
-					}
+					"correctness": { "noUnresolvedImports": "off" }
 				}
 			}
 		}
