Страницы портфолио и заказов [deploy]

--- a/tools/main.conf
+++ b/tools/main.conf
@@ -40,17 +40,10 @@ server {
 	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 	# -----------------------------
-	# 4. Rewrite / if
-	# -----------------------------
-	if (!-f $request_filename) {
-		rewrite ^/(.*)/$ /$1 permanent;
-	}
-
-	# -----------------------------
-	# 5. Location blocks (по приоритету)
+	# 4. Location blocks (по приоритету)
 	# -----------------------------
 
-	## 5.1 Internal static / error pages
+	## 4.1 Internal static / error pages
 	location ^~ /__ {
 		internal;
 		add_header Cache-Control "no-store";
@@ -59,22 +52,24 @@ server {
 		root /home/web-studio/efiand/app;
 	}
 
-	## 5.2 Public static assets (regex)
-	location ~* ^.+.(css|html|ico|js|pdf|png|svg|txt|webmanifest|webp|woff2|xml)$ {
+	## 4.2 Public static assets (regex)
+	location ~* \.(css|ico|js|pdf|png|svg|txt|webmanifest|webp|woff2|xml)$ {
 		root /home/web-studio/efiand/public;
 		charset utf-8;
 		expires 30d;
 	}
 
-	## 5.3 AMP pages
-	location ~ ^/amp(.*)$ {
+	## 4.3 Static pages
+	location / {
 		root /home/web-studio/efiand/public;
 		charset utf-8;
 		expires 30d;
-		try_files /amp$1/index.html =404;
+
+		rewrite ^/(.*)/(index.html)?$ /$1 permanent;
+		try_files $uri/index.html =404;
 	}
 
-	## 5.4 Proxy / backend
+	## 4.4 Proxy / backend
 	location /api/telegram {
 		proxy_pass http://127.0.0.1:4104;
 		proxy_http_version 1.1;
